<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_report_alert_id"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:ems="10"
        android:fontFamily="@font/convergence"
        android:gravity="center"
        android:hint="@string/hint_report"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_send_alert_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_report_alert_id"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_button_master"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/text2"
        android:textSize="@dimen/text_size_button" />

    <Button
        android:id="@+id/btn_cancel_alert_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_report_alert_id"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_button_secounder"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/text1"
        android:textSize="@dimen/text_size_button" />
</RelativeLayout>